Update App ID to club.zbridge.zbridge and sync configuration

--- a/club.zbridge.zbridge.desktop
+++ b/club.zbridge.zbridge.desktop
@@ -4,7 +4,7 @@ Comment=A professional bridge card game club for bridge enthusiasts
 Exec=zbridge-club %U
 Terminal=false
 Type=Application
-Icon=org.zbridge.Club
+Icon=club.zbridge.zbridge
 Categories=Game;CardGame;
 Keywords=bridge;card;game;club;
 MimeType=x-scheme-handler/zbridge;
