Update metadata: improved description and added input requirements

--- a/club.zbridge.zbridge.desktop
+++ b/club.zbridge.zbridge.desktop
@@ -1,6 +1,6 @@
 [Desktop Entry]
 Name=zBridge Club
-Comment=A professional bridge card game club for bridge enthusiasts
+Comment=Contract bridge game with a 2/1 bot and social/rated rooms
 Exec=zbridge-club %U
 Terminal=false
 Type=Application
