--- a/club.zbridge.zbridge.yaml
+++ b/club.zbridge.zbridge.yaml
@@ -25,6 +25,8 @@ finish-args:
 - --filesystem=xdg-download/zBridge_Club:create
 modules:
 - name: zbridge-club
+  only-arches:
+  - x86_64
   buildsystem: simple
   build-commands:
   - mkdir -p flatpak-node/cache/electron
@@ -40,7 +42,7 @@ modules:
   sources:
   - type: git
     url: https://github.com/amitter84/zbridge-flatpak-source.git
-    tag: v1.0.5
+    tag: v1.0.7
   - dest: flatpak-node/cache/electron
     only-arches:
     - x86_64
@@ -58,3 +60,16 @@ modules:
     path: zbridge-club.sh
   - type: file
     path: electron-shasums.txt
+
+- name: zbridge-stub
+  buildsystem: simple
+  only-arches: [aarch64]
+  build-commands:
+  - install -Dm755 /usr/bin/true /app/bin/zbridge-club
+  - install -Dm644 club.zbridge.zbridge.desktop /app/share/applications/club.zbridge.zbridge.desktop
+  - install -Dm644 club.zbridge.zbridge.metainfo.xml /app/share/metainfo/club.zbridge.zbridge.metainfo.xml
+  - install -Dm644 icon.png /app/share/icons/hicolor/512x512/apps/club.zbridge.zbridge.png
+  sources:
+  - type: git
+    url: https://github.com/amitter84/zbridge-flatpak-source.git
+    tag: v1.0.7
