--- a/club.zbridge.zbridge.yaml
+++ b/club.zbridge.zbridge.yaml
@@ -36,12 +36,12 @@ modules:
   - cp -r dist/linux*-unpacked /app/zbridge-club
   - install -Dm0755 zbridge-club.sh /app/bin/zbridge-club
   - install -Dm644 club.zbridge.zbridge.desktop /app/share/applications/club.zbridge.zbridge.desktop
-  - install -Dm644 club.zbridge.zbridge.metainfo.xml /app/share/metainfo/club.zbridge.zbridge.metainfo.xml
+  - install -Dm644 metainfo-fixed.xml /app/share/metainfo/club.zbridge.zbridge.metainfo.xml
   - install -Dm644 icon.png /app/share/icons/hicolor/512x512/apps/club.zbridge.zbridge.png
   sources:
   - type: git
     url: https://github.com/amitter84/zbridge-flatpak-source.git
-    tag: v1.0.7
+    tag: v1.0.5
   - dest: flatpak-node/cache/electron
     only-arches:
     - x86_64
@@ -59,6 +59,8 @@ modules:
     path: zbridge-club.sh
   - type: file
     path: electron-shasums.txt
+  - type: file
+    path: metainfo-fixed.xml
 
 - name: zbridge-stub
   buildsystem: simple
@@ -66,9 +68,11 @@ modules:
   build-commands:
   - install -Dm755 /usr/bin/true /app/bin/zbridge-club
   - install -Dm644 club.zbridge.zbridge.desktop /app/share/applications/club.zbridge.zbridge.desktop
-  - install -Dm644 club.zbridge.zbridge.metainfo.xml /app/share/metainfo/club.zbridge.zbridge.metainfo.xml
+  - install -Dm644 metainfo-fixed.xml /app/share/metainfo/club.zbridge.zbridge.metainfo.xml
   - install -Dm644 icon.png /app/share/icons/hicolor/512x512/apps/club.zbridge.zbridge.png
   sources:
   - type: git
     url: https://github.com/amitter84/zbridge-flatpak-source.git
-    tag: v1.0.7
+    tag: v1.0.5
+  - type: file
+    path: metainfo-fixed.xml
