fix: update icon reference to svg in main.js and package.json

--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
       ],
       "category": "Game",
       "maintainer": "zBridge Club <support@zbridge.club>",
-      "icon": "icon.png"
+      "icon": "club.zbridge.zbridge.svg"
     },
     "flatpak": {
       "runtimeVersion": "24.08",
